@@ -2,9 +2,6 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="../CSS/stylesheet.css"/>
-	<link rel="stylesheet" type="text/css" href="../CSS/loginStyleSheet.css"/>
-	<link rel="stylesheet" type="text/css" href="../CSS/content.css"/>
-	<link rel="stylesheet" type="text/css" href="../CSS/headerStyleSheet.css"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://kit.fontawesome.com/969d13854d.js" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="../JS/globalFunctions.js"></script>
